Partial integTest fixes
Signed-off-by: Alex Rehnby-Martin <alex.rehnby-martin@improving.com>